--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,11 @@
     background-position: 50% 100%;
   }
 }
+
+.solution-heading {
+  font-family: "Tomorrow", sans-serif;
+}
+
+.card {
+  font-family: "Tomorrow", sans-serif;
+}
