--- a/src/App.css
+++ b/src/App.css
@@ -86,3 +86,31 @@
 .our-works {
   font-family: "Tomorrow", sans-serif;
 }
+
+.insight-header {
+  font-family: "Tomorrow", sans-serif;
+}
+
+.card-title {
+  font-family: "Tomorrow", sans-serif;
+}
+
+.card-desc {
+  font-family: "Inter", sans-serif;
+}
+
+.CTA {
+  font-family: "Tomorrow", sans-serif;
+}
+
+.CTA p {
+  font-family: "Inter", sans-serif;
+}
+
+.footer h3 {
+  font-family: "Tomorrow", sans-serif;
+}
+
+.footer p {
+  font-family: "Inter", sans-serif;
+}
