--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,26 @@
   font-family: "Inter", sans-serif;
 }
 
+.link-navbar {
+  position: relative;
+}
+
+.link-navbar::before {
+  content: " ";
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  background: #f05a29;
+  border-radius: 8px 8px 0px 0px;
+  top: 60px;
+  opacity: 0;
+  transition: opacity 300ms;
+}
+
+.link-navbar:hover::before {
+  opacity: 1;
+}
+
 @media (max-width: 768px) {
   .background-hero1 {
     clip-path: polygon(100% 0px, 100% 0px, 100% 100%, 0% 100%) !important;
@@ -128,10 +148,22 @@
     width: 100%;
     right: 0;
     margin-top: 25rem;
-    clip-path: polygon(100% 0%, 125% 0, 65% 100%, 35% 100%);
+    clip-path: polygon(100% 0%, 120% 0, 65% 100%, 40% 100%);
   }
 
   .hand-image {
     clip-path: polygon(0% 0, 111% 0, 71% 100%, 0 100%);
+  }
+}
+
+@media (min-width: 1024px) {
+  .hand-image {
+    display: flex;
+    justify-content: center;
+    clip-path: polygon(0% 0, 96% 0, 68% 100%, 0 100%);
+  }
+
+  .text-img::before {
+    clip-path: polygon(60% 0, 97% 0, 41% 100%, 0 100%);
   }
 }
